<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="READ_Manufacturer_label" Id="{15d1b11f-1b71-4f19-97bd-14c8867b098b}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK READ_Manufacturer_label
VAR_INPUT
	NodeID		: BYTE; (* This Port No. addresses the CANopen Node (see System Manager) *)	
	Start		: BOOL;
END_VAR
VAR_OUTPUT
	Label_Out	: ST_Manufacturer_label;
	Finished	: BOOL := FALSE;
END_VAR
VAR
	Index		: INT;
	Label		: ST_Manufacturer_label;
	SDO_READ 	: FB_SDO_READ;	
	SDO_READ_REAL 	: FB_SDO_READ_REAL;	
	SDO_WRITE 	: FB_SDO_WRITE;
	WriteData	: ARRAY [0..255] OF BYTE;		
	CAN_Objects	: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Restart after complete run
IF (Index = 255) AND Start THEN
	Index := 0;
END_IF


IF NOT (Index = 255) THEN 
	SDO_READ(StartReading:=FALSE);
	SDO_READ_REAL(StartReading:=FALSE);
END_IF
	
	
CASE Index OF	
	0: // Start reading Serial_Number
		IF Start THEN		
			Finished := FALSE;
			SDO_READ(	
				AdsNetID		:= '5.156.6.243.3.1',
				PortNr			:= 16#1000 + NodeID,
				CO_Index		:= 16#41C0,
				CO_SubIndex		:= 16#01,
				DataLength		:= 4,
				StartReading	:= TRUE	
			);	
			Index := Index + 1;
		END_IF
		
	1: // Serial_Number is read
		IF SDO_READ.ReadDataAvailable THEN
			Label.Serial_Number := SHL(BYTE_TO_DWORD(SDO_READ.ReadData[3]),24) + SHL(BYTE_TO_DWORD(SDO_READ.ReadData[2]),16) + SHL(BYTE_TO_DWORD(SDO_READ.ReadData[1]),8) + BYTE_TO_DWORD(SDO_READ.ReadData[0]);				
			Index := Index + 1;
		END_IF

	
	2: // Start reading Min_v
		SDO_READ(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#03,
			DataLength		:= 4,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;
	
	3: // Min_v is read
		IF SDO_READ.ReadDataAvailable THEN
			Label.Min_v := SHL(BYTE_TO_DWORD(SDO_READ.ReadData[3]),24) + SHL(BYTE_TO_DWORD(SDO_READ.ReadData[2]),16) + SHL(BYTE_TO_DWORD(SDO_READ.ReadData[1]),8) + BYTE_TO_DWORD(SDO_READ.ReadData[0]);				
			Index := Index + 1;
		END_IF
		
		
	4: // Start reading Max_v
		SDO_READ(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#04,
			DataLength		:= 4,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;
		
	5: // Max_v is read
		IF SDO_READ.ReadDataAvailable THEN
			Label.Max_v := SHL(BYTE_TO_DWORD(SDO_READ.ReadData[3]),24) + SHL(BYTE_TO_DWORD(SDO_READ.ReadData[2]),16) + SHL(BYTE_TO_DWORD(SDO_READ.ReadData[1]),8) + BYTE_TO_DWORD(SDO_READ.ReadData[0]);				
			Index := Index + 1;
		END_IF
		
		
	6: // Start reading Motor_rated_current
		SDO_READ(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#05,
			DataLength		:= 4,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;
		
	7: // Motor_rated_current is read
		IF SDO_READ.ReadDataAvailable THEN
			Label.Motor_rated_current := SHL(BYTE_TO_DWORD(SDO_READ.ReadData[3]),24) + SHL(BYTE_TO_DWORD(SDO_READ.ReadData[2]),16) + SHL(BYTE_TO_DWORD(SDO_READ.ReadData[1]),8) + BYTE_TO_DWORD(SDO_READ.ReadData[0]);				
			Index := Index + 1;
		END_IF
		
		
	8: // Start reading Drive_rated_current
		SDO_READ(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#06,
			DataLength		:= 4,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;
			
	9: // Drive_rated_current is read
		IF SDO_READ.ReadDataAvailable THEN
			Label.Drive_rated_current := SHL(BYTE_TO_DWORD(SDO_READ.ReadData[3]),24) + SHL(BYTE_TO_DWORD(SDO_READ.ReadData[2]),16) + SHL(BYTE_TO_DWORD(SDO_READ.ReadData[1]),8) + BYTE_TO_DWORD(SDO_READ.ReadData[0]);				
			Index := Index + 1;
		END_IF
		
		
	10: // Start reading Max_current
		SDO_READ(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#07,
			DataLength		:= 4,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;

	11: // Max_current is read
		IF SDO_READ.ReadDataAvailable THEN
			Label.Max_current := SHL(BYTE_TO_WORD(SDO_READ.ReadData[1]),8) + BYTE_TO_WORD(SDO_READ.ReadData[0]);				
			Index := Index + 1;
		END_IF
		
		
	12: // Start reading Motor_rated_torque
		SDO_READ(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#08,
			DataLength		:= 4,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;
	
	13: // Motor_rated_torque is read
		IF SDO_READ.ReadDataAvailable THEN
			Label.Motor_rated_torque := SHL(BYTE_TO_DWORD(SDO_READ.ReadData[3]),24) + SHL(BYTE_TO_DWORD(SDO_READ.ReadData[2]),16) + SHL(BYTE_TO_DWORD(SDO_READ.ReadData[1]),8) + BYTE_TO_DWORD(SDO_READ.ReadData[0]);				
			Index := Index + 1;
		END_IF			
		
		
	14: // Start reading Max_torque
		SDO_READ(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#09,
			DataLength		:= 2,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;		
		
	15: // Max_torque is read
		IF SDO_READ.ReadDataAvailable THEN
			Label.Max_torque := SHL(BYTE_TO_WORD(SDO_READ.ReadData[1]),8) + BYTE_TO_WORD(SDO_READ.ReadData[0]);
			Index := Index + 1;
		END_IF
		
		
	16: // Start reading Motor_rated_speed
		SDO_READ(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#0A,
			DataLength		:= 4,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;
			
	17: // Motor_rated_speed is read
		IF SDO_READ.ReadDataAvailable THEN
			Label.Motor_rated_speed := SHL(BYTE_TO_DWORD(SDO_READ.ReadData[3]),24) + SHL(BYTE_TO_DWORD(SDO_READ.ReadData[2]),16) + SHL(BYTE_TO_DWORD(SDO_READ.ReadData[1]),8) + BYTE_TO_DWORD(SDO_READ.ReadData[0]);				
			Index := Index + 1;
		END_IF
		
		
	18: // Start reading Number_of_pole_pairs
		SDO_READ(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#0B,
			DataLength		:= 2,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;			
		
	19: // Reading Number_of_pole_pairs, next reading Motor_torque_constant
		IF SDO_READ.ReadDataAvailable THEN
			Label.Number_of_pole_pairs := SHL(BYTE_TO_WORD(SDO_READ.ReadData[1]),8) + BYTE_TO_WORD(SDO_READ.ReadData[0]);
			Index := Index + 1;
		END_IF
		
		
	20: // Start reading Motor_torque_constant
		SDO_READ_REAL(	
				AdsNetID		:= '5.156.6.243.3.1',
				PortNr			:= 16#1000 + NodeID,
				CO_Index		:= 16#41C0,
				CO_SubIndex		:= 16#0C,
				StartReading	:= TRUE	
			);	
			Index := Index + 1;			
		
	21: // Motor_torque_constant is read
		IF SDO_READ_REAL.ReadDataAvailable THEN
			Label.Motor_torque_constant := SDO_READ_REAL.ReadData;
			Index := Index + 1;
		END_IF
		
		
	22: // Start reading Flux_producing_P_gain
		SDO_READ_REAL(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#0D,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;
					
	23: // Flux_producing_P_gain is read
		IF SDO_READ_REAL.ReadDataAvailable THEN
			Label.Flux_producing_P_gain := SDO_READ_REAL.ReadData;
			Index := Index + 1;
		END_IF
		
		
	24: // Start reading Flux_producing_I_gain
		SDO_READ_REAL(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#0E,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;

	25: // Flux_producing_I_gain is read
		IF SDO_READ_REAL.ReadDataAvailable THEN
			Label.Flux_producing_I_gain := SDO_READ_REAL.ReadData;
			Index := Index + 1;
		END_IF
		
		
	26: // Start reading Torque_producing_P_gain
		SDO_READ_REAL(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#0F,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;
		
	27: // Torque_producing_P_gain is read
		IF SDO_READ_REAL.ReadDataAvailable THEN
			Label.Torque_producing_P_gain := SDO_READ_REAL.ReadData;
			Index := Index + 1;
		END_IF
		
		
	28: // Start reading Torque_producing_I_gain
		SDO_READ_REAL(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#10,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;

	29: // Torque_producing_I_gain is read
		IF SDO_READ_REAL.ReadDataAvailable THEN
			Label.Torque_producing_I_gain := SDO_READ_REAL.ReadData;
			Index := Index + 1;
		END_IF
		
		
	30: // Start reading Magnetic_encoder_offset
		SDO_READ(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#11,
			DataLength		:= 2,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;

	31: // Magnetic_encoder_offset is read
		IF SDO_READ.ReadDataAvailable THEN
			Label.Magnetic_encoder_offset := SHL(BYTE_TO_WORD(SDO_READ.ReadData[1]),8) + BYTE_TO_WORD(SDO_READ.ReadData[0]);				
			Index := Index + 1;
		END_IF
		
		
	32: // Start reading Motor_with_brake
		SDO_READ(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#12,
			DataLength		:= 2,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;

	33: // Motor_with_brake is read
		IF SDO_READ.ReadDataAvailable THEN
			Label.Motor_with_brake := SHL(BYTE_TO_WORD(SDO_READ.ReadData[1]),8) + BYTE_TO_WORD(SDO_READ.ReadData[0]);				
			Index := Index + 1;
		END_IF
		
		
	34: // Start reading Encoder_mode_adjust
		SDO_READ(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#13,
			DataLength		:= 2,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;

	35: // Encoder_mode_adjust is read
		IF SDO_READ.ReadDataAvailable THEN
			Label.Encoder_mode_adjust := SHL(BYTE_TO_WORD(SDO_READ.ReadData[1]),8) + BYTE_TO_WORD(SDO_READ.ReadData[0]);				
			Index := Index + 1;
		END_IF
		
		
	36: // Start reading Motor_max_speed
		SDO_READ(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#14,
			DataLength		:= 2,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;
					
	37: // Motor_max_speed is read
		IF SDO_READ.ReadDataAvailable THEN
			Label.Motor_max_speed := SHL(BYTE_TO_WORD(SDO_READ.ReadData[1]),8) + BYTE_TO_WORD(SDO_READ.ReadData[0]);				
			Index := Index + 1;
		END_IF
				
		
	38: // Start reading Rotor_inertia
		SDO_READ_REAL(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#15,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;
					
	39: // Rotor_inertia is read
		IF SDO_READ_REAL.ReadDataAvailable THEN
			Label.Rotor_inertia := SDO_READ_REAL.ReadData;
			Index := Index + 1;
		END_IF
		
		
	40: // Start reading Motor_time_at_peak
		SDO_READ_REAL(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#17,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;
					
	41: // Motor_time_at_peak is read
		IF SDO_READ_REAL.ReadDataAvailable THEN
			Label.Motor_time_at_peak := SDO_READ_REAL.ReadData;
			Index := Index + 1;
		END_IF
		
		
	42: // Start reading Drive_time_at_peak
		SDO_READ_REAL(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#18,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;
		
	43: // Drive_time_at_peak is read
		IF SDO_READ_REAL.ReadDataAvailable THEN
			Label.Drive_time_at_peak := SDO_READ_REAL.ReadData;
			Index := Index + 1;
		END_IF
		
		
	44: // Start reading Singleturn_resolution
		SDO_READ(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#19,
			DataLength		:= 1,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;
					
	45: // Singleturn_resolution is read 
		IF SDO_READ.ReadDataAvailable THEN
			Label.Singleturn_resolution := SDO_READ.ReadData[0];				
			Index := Index + 1;
		END_IF		
		
		
	46: // Start reading Multiturn_resolution
		SDO_READ(	
			AdsNetID		:= '5.156.6.243.3.1',
			PortNr			:= 16#1000 + NodeID,
			CO_Index		:= 16#41C0,
			CO_SubIndex		:= 16#1A,
			DataLength		:= 1,
			StartReading	:= TRUE	
		);	
		Index := Index + 1;
			
	47: // Multiturn_resolution is read
		IF SDO_READ.ReadDataAvailable THEN
			Label.Multiturn_resolution := SDO_READ.ReadData[0];	
			Index := 255;
		END_IF		
				
		
	255: // Finished 
		Label_Out := Label;
		Finished := TRUE;
				
		
	ELSE
		Index := 255;
			
END_CASE	




]]></ST>
    </Implementation>
    <LineIds Name="READ_Manufacturer_label">
      <LineId Id="20" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="14" Count="1" />
      <LineId Id="909" Count="0" />
      <LineId Id="911" Count="0" />
      <LineId Id="906" Count="0" />
      <LineId Id="1120" Count="0" />
      <LineId Id="1122" Count="0" />
      <LineId Id="1121" Count="0" />
      <LineId Id="907" Count="0" />
      <LineId Id="910" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="881" Count="0" />
      <LineId Id="82" Count="5" />
      <LineId Id="89" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="1021" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="930" Count="2" />
      <LineId Id="941" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="943" Count="0" />
      <LineId Id="942" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="688" Count="5" />
      <LineId Id="112" Count="1" />
      <LineId Id="95" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="916" Count="2" />
      <LineId Id="927" Count="0" />
      <LineId Id="915" Count="0" />
      <LineId Id="928" Count="0" />
      <LineId Id="687" Count="0" />
      <LineId Id="666" Count="0" />
      <LineId Id="694" Count="5" />
      <LineId Id="681" Count="1" />
      <LineId Id="685" Count="0" />
      <LineId Id="944" Count="0" />
      <LineId Id="946" Count="3" />
      <LineId Id="945" Count="0" />
      <LineId Id="950" Count="0" />
      <LineId Id="665" Count="0" />
      <LineId Id="1019" Count="0" />
      <LineId Id="701" Count="5" />
      <LineId Id="128" Count="1" />
      <LineId Id="132" Count="0" />
      <LineId Id="135" Count="0" />
      <LineId Id="952" Count="7" />
      <LineId Id="961" Count="9" />
      <LineId Id="974" Count="8" />
      <LineId Id="984" Count="7" />
      <LineId Id="216" Count="0" />
      <LineId Id="994" Count="7" />
      <LineId Id="1003" Count="8" />
      <LineId Id="196" Count="0" />
      <LineId Id="1014" Count="1" />
      <LineId Id="730" Count="0" />
      <LineId Id="215" Count="0" />
      <LineId Id="133" Count="0" />
      <LineId Id="239" Count="0" />
      <LineId Id="1037" Count="0" />
      <LineId Id="1024" Count="0" />
      <LineId Id="1027" Count="8" />
      <LineId Id="1022" Count="0" />
      <LineId Id="240" Count="1" />
      <LineId Id="1038" Count="1" />
      <LineId Id="738" Count="0" />
      <LineId Id="1040" Count="2" />
      <LineId Id="856" Count="0" />
      <LineId Id="739" Count="4" />
      <LineId Id="253" Count="1" />
      <LineId Id="257" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="262" Count="1" />
      <LineId Id="744" Count="0" />
      <LineId Id="1043" Count="3" />
      <LineId Id="745" Count="0" />
      <LineId Id="1047" Count="0" />
      <LineId Id="746" Count="4" />
      <LineId Id="275" Count="1" />
      <LineId Id="279" Count="0" />
      <LineId Id="282" Count="2" />
      <LineId Id="752" Count="0" />
      <LineId Id="1048" Count="4" />
      <LineId Id="857" Count="0" />
      <LineId Id="753" Count="3" />
      <LineId Id="296" Count="1" />
      <LineId Id="300" Count="0" />
      <LineId Id="304" Count="2" />
      <LineId Id="758" Count="0" />
      <LineId Id="1053" Count="4" />
      <LineId Id="759" Count="4" />
      <LineId Id="318" Count="1" />
      <LineId Id="322" Count="0" />
      <LineId Id="324" Count="0" />
      <LineId Id="326" Count="1" />
      <LineId Id="765" Count="0" />
      <LineId Id="1124" Count="0" />
      <LineId Id="1059" Count="3" />
      <LineId Id="766" Count="4" />
      <LineId Id="339" Count="1" />
      <LineId Id="343" Count="0" />
      <LineId Id="346" Count="2" />
      <LineId Id="772" Count="0" />
      <LineId Id="1125" Count="0" />
      <LineId Id="1064" Count="3" />
      <LineId Id="773" Count="4" />
      <LineId Id="360" Count="1" />
      <LineId Id="364" Count="0" />
      <LineId Id="367" Count="2" />
      <LineId Id="779" Count="0" />
      <LineId Id="1126" Count="0" />
      <LineId Id="1069" Count="3" />
      <LineId Id="780" Count="4" />
      <LineId Id="381" Count="1" />
      <LineId Id="385" Count="0" />
      <LineId Id="388" Count="2" />
      <LineId Id="786" Count="0" />
      <LineId Id="1127" Count="0" />
      <LineId Id="1074" Count="3" />
      <LineId Id="787" Count="5" />
      <LineId Id="402" Count="1" />
      <LineId Id="406" Count="0" />
      <LineId Id="409" Count="2" />
      <LineId Id="793" Count="0" />
      <LineId Id="1078" Count="4" />
      <LineId Id="794" Count="5" />
      <LineId Id="423" Count="1" />
      <LineId Id="427" Count="0" />
      <LineId Id="430" Count="2" />
      <LineId Id="800" Count="0" />
      <LineId Id="1083" Count="4" />
      <LineId Id="801" Count="5" />
      <LineId Id="444" Count="1" />
      <LineId Id="448" Count="0" />
      <LineId Id="450" Count="0" />
      <LineId Id="452" Count="1" />
      <LineId Id="807" Count="0" />
      <LineId Id="1088" Count="4" />
      <LineId Id="808" Count="5" />
      <LineId Id="465" Count="1" />
      <LineId Id="469" Count="0" />
      <LineId Id="471" Count="0" />
      <LineId Id="473" Count="1" />
      <LineId Id="814" Count="0" />
      <LineId Id="1093" Count="2" />
      <LineId Id="1119" Count="0" />
      <LineId Id="1097" Count="0" />
      <LineId Id="815" Count="4" />
      <LineId Id="486" Count="1" />
      <LineId Id="490" Count="0" />
      <LineId Id="492" Count="0" />
      <LineId Id="494" Count="1" />
      <LineId Id="821" Count="0" />
      <LineId Id="1128" Count="0" />
      <LineId Id="1099" Count="3" />
      <LineId Id="822" Count="4" />
      <LineId Id="507" Count="1" />
      <LineId Id="511" Count="0" />
      <LineId Id="513" Count="0" />
      <LineId Id="515" Count="1" />
      <LineId Id="828" Count="0" />
      <LineId Id="1129" Count="0" />
      <LineId Id="1104" Count="3" />
      <LineId Id="829" Count="4" />
      <LineId Id="528" Count="1" />
      <LineId Id="532" Count="0" />
      <LineId Id="535" Count="2" />
      <LineId Id="835" Count="0" />
      <LineId Id="1130" Count="0" />
      <LineId Id="1109" Count="3" />
      <LineId Id="836" Count="5" />
      <LineId Id="549" Count="0" />
      <LineId Id="912" Count="0" />
      <LineId Id="553" Count="0" />
      <LineId Id="555" Count="0" />
      <LineId Id="557" Count="1" />
      <LineId Id="842" Count="0" />
      <LineId Id="1113" Count="1" />
      <LineId Id="1116" Count="0" />
      <LineId Id="1118" Count="0" />
      <LineId Id="1117" Count="0" />
      <LineId Id="843" Count="5" />
      <LineId Id="570" Count="1" />
      <LineId Id="574" Count="0" />
      <LineId Id="261" Count="0" />
      <LineId Id="612" Count="1" />
      <LineId Id="849" Count="0" />
      <LineId Id="629" Count="0" />
      <LineId Id="610" Count="0" />
      <LineId Id="868" Count="0" />
      <LineId Id="862" Count="1" />
      <LineId Id="865" Count="0" />
      <LineId Id="900" Count="0" />
      <LineId Id="899" Count="0" />
      <LineId Id="859" Count="0" />
      <LineId Id="30" Count="2" />
      <LineId Id="27" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="18" Count="1" />
      <LineId Id="13" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>